--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   carousel_slider: ^4.2.1
   dio: ^5.3.3
   image_picker: ^1.0.4
+  flutter_rating_bar: ^4.0.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
